--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -9,3 +9,12 @@ rebar_version=(tag 2.2.0)
 
 # Do dependencies have to be built from scratch on every deploy?
 always_build_deps=false
+
+# Always rebuild from scratch on every deploy?
+always_rebuild=false
+
+# Export heroku config vars
+config_vars_to_export=(DATABASE_URL)
+
+# A command to run right after compiling the app
+post_compile="pwd"
