--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -4,9 +4,6 @@ erlang_version=17.5
 # Elixir version
 elixir_version=1.0.4
 
-# Rebar version
-rebar_version=(tag 2.2.0)
-
 # Do dependencies have to be built from scratch on every deploy?
 always_build_deps=false
 
@@ -17,4 +14,4 @@ always_rebuild=false
 config_vars_to_export=(DATABASE_URL)
 
 # A command to run right after compiling the app
-post_compile="pwd"
+post_compile="mix phoenix.digest"
